# ArcSphere3D

./: .env.example  .gitignore  .pre-commit-config.yaml  ArcSphere3D 要件定義書（Requirements Definition）.md  ArcSphere3D 詳細設計仕様書（Detailed Design Specification）.md  README.md  state.json
backend/: .env.example  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260516_0001_create_initial_schema.py  20260516_0002_files_project_sha256_unique.py  20260517_0003_add_alignments_and_ip_points.py  20260518_0004_add_project_members.py  20260518_0005_add_vertical_alignments.py  20260519_0006_backfill_owner_members.py  20260521_0007_auth_refresh_tokens.py  20260521_0008_audit_logs.py  20260521_0009_multipart_uploads.py  20260522_0007_add_audit_logs.py  20260522_0008_add_user_password_hash.py  20260523_0009_add_project_description.py  20260523_0009_drop_users_sub_column.py  20260523_0010_drop_users_sub_column.py  20260526_0012_add_tags.py  (+4 more)
backend/app/: __init__.py  config.py  deps.py  email.py  logging.py  main.py  notify.py  ratelimit.py  s3.py  schemas.py  security.py  ws_manager.py
backend/tests/: conftest.py  test_admin_concurrent_locks.py  test_admin_create_user.py  test_admin_reset_password.py  test_admin_stats.py  test_admin_update_role.py  test_admin_users.py  test_alignments.py  test_audit_logs.py  test_auth.py  test_auth_db.py  test_comments.py  test_files.py  test_health.py  test_multipart.py  test_openapi.py  test_password_change.py  test_production_auth.py  test_project_export.py  test_project_members.py  test_projects.py  test_ratelimit.py  test_rbac_3tier.py  test_s3.py  test_schema_patch_me.py  test_schemas_nul_bytes.py  test_security_invariants.py  test_tags.py  test_user_notifications.py  test_user_profile.py  test_users.py  test_verticals.py  test_ws_notifications.py
(+179 files in other folders)
